# fb_viewer

./: .gitignore  .pdm-python  README.md  config.toml  main.py  pyproject.toml
src/: config.py
src/fb_viewer/: __init__.py  cli.py  core.py  model.py
